<resources>
    <string name="app_name">Image Machine</string>
    <string name="mhacine_data">Machine Data</string>
    <string name="code_reader">Code Reader</string>
    <string name="add_machine_data">Add Machine Data</string>

    <string name="hint_generate_machine_id">Machine ID</string>
    <string name="hint_machine_barcode_number">Machine Barcode Number</string>
    <string name="hint_machine_name">Machine Name</string>
    <string name="hint_machine_type">Machine Type</string>
    <string name="Last_Maintenance">Last Maintenance</string>

    <string name="btn_select_date">select date</string>
    <string name="btn_ok">ok</string>
    <string name="btn_machine_image">Machine Image</string>

    <string name="edit">edit</string>
    <string name="delete">delete</string>

    <string name="alert">Alert</string>
    <string name="empty">"Empty Field not allowed"</string>
    <string name="ok">OK</string>
    <string name="nama">Name</string>
    <string name="type">Type</string>

    <string-array name="sort_data">
        <item>Machine Name</item>
        <item>Machine Type</item>
    </string-array>

</resources>
