<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/edit_m_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_generate_machine_id"
                android:inputType="number"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/edit_m_bn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:hint="@string/hint_machine_barcode_number"
                android:inputType="number"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/edit_m_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_machine_name"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/edit_m_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:hint="@string/hint_machine_type"
                android:textColor="@android:color/black"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Last_Maintenance"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/edit_selected_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="@android:color/black"/>
            <Button
                android:id="@+id/edit_button_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showDatePickerDialog"
                android:text="@string/btn_select_date" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_ok"
            android:textColor="@android:color/black"
            />
</LinearLayout>
