<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="10dp"
               android:text="@string/hint_generate_machine_id"
               android:textColor="@android:color/black"/>

           <TextView
               android:id="@+id/edit_text_m_id"
               android:layout_width="wrap_content"
               android:layout_height="20dp"
               android:text=""
               android:textColor="@android:color/black" />
       </LinearLayout>

        <EditText
            android:id="@+id/edit_text_m_bn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:hint="@string/hint_machine_barcode_number"
            android:inputType="number"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edit_text_m_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_machine_name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edit_text_m_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:hint="@string/hint_machine_type"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Last_Maintenance"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/selected_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:text="@string/btn_select_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/add_machine_data"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/btn_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

        </Spinner>

    </LinearLayout>

    <ListView
        android:id="@+id/list_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
