<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_generate_machine_id"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_machine_name"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_machine_type"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_machine_barcode_number"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Last_Maintenance"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/angka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/tipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/barkode_angka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/last_mainten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textSize="15dp"
                android:textColor="@android:color/black"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_machine_image"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_machine_image"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="normal"
        android:background="@android:color/darker_gray"/>


    <GridView
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="auto_fit"></GridView>

</LinearLayout>
